Fix double image on mobile

--- a/css/less/theme.less
+++ b/css/less/theme.less
@@ -284,7 +284,7 @@ input, option, textarea {
   @media only screen and (max-width : 1224px) {
     padding-left:10%;
     width:100%;
-    img, .bigimg {
+    .bigimg {
       width: 100%;
       max-width:100%;
       display:block;
